<resources>


    <string name="app_name">\n</string>

    <string name="game_not_started">Game not started</string>
    <string name="start_game">Start game</string>



    <string name="play_offline">Play Offline</string>
    <string name="create_online_game">Create Online Game</string>
    <string name="join_online_game">Join Online Game</string>
    <string name="enter_game_id">Enter Game ID</string>
    <string name="tic_tac_toe_online">Tic Tac Toe Online</string>
    <string name="or">Or</string>
</resources>